# QR

./: .gitignore  BasicXls.cpp  BasicXls.h  CMakeLists.txt  QrTable.cpp  QrTable.h  QrTable.ui  README.txt  TableSelect.cpp  TableSelect.h  TableSelect.ui  XlsFormat.cpp  XlsFormat.h  config.cpp  config.h  containers.cpp  containers.h  containers.ui  dialog.cpp  dialog.h  dialog.ui  extras.cpp  extras.h  help.cpp  help.h  help.ui  main.cpp  main.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  qr.rc  qrCodes.cpp  qrCodes.h  qrDialog.cpp  qrDialog.h  qrDialog.ui  quick.ui  quickStart.cpp  quickStart.h  (+12 more)
OpenXLSX/sources/: XLDocument.cpp
res/: basicStyle  basicStyle.css  dialogStyle.css  style.css  txtStyle.css
